[package]
name = "pest-derive-proc"
version = "0.1.0"
edition = "2024"

[dependencies]
pest_generator = { workspace = true, features = ["export-internal"] }
pest_meta = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[lib]
proc-macro = true
